WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
132207
REGRESSION (
r167818
): editing/inserting/typing-space-to-trigger-smart-link.html fails on WebKit1 bots
https://bugs.webkit.org/show_bug.cgi?id=132207
Summary
REGRESSION (r167818): editing/inserting/typing-space-to-trigger-smart-link.ht...
Tim Horton
Reported
2014-04-25 14:43:10 PDT
http://build.webkit.org/results/Apple%20Mavericks%20Release%20WK1%20(Tests)/r167820%20(5521)/results.html
http://webkit-test-results.appspot.com/dashboards/flakiness_dashboard.html#showAllRuns=true&tests=editing%2Finserting%2Ftyping-space-to-trigger-smart-link.html
Attachments
Incorrect fix: use setTimeout() in test
(2.58 KB, patch)
2014-04-27 10:25 PDT
,
David Kilzer (:ddkilzer)
no flags
Details
Formatted Diff
Diff
Patch
(6.24 KB, patch)
2014-05-09 17:51 PDT
,
Jon Honeycutt
darin
: review+
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2014-04-25 14:43:44 PDT
<
rdar://problem/16730393
>
Tim Horton
Comment 2
2014-04-25 14:44:05 PDT
-PASS: the anchor for 'www.foo.com' has been created. +Failed: the expected content was 'The <a href="
http://www.foo.com
">www.foo.com</a> should be underlined and there is an anchor node created for it.', but the actual result was 'The www.foo.com should be underlined and there is an anchor node created for it.'.
Tim Horton
Comment 3
2014-04-25 15:03:32 PDT
Marked in
http://trac.webkit.org/changeset/167827
for WK1
David Kilzer (:ddkilzer)
Comment 4
2014-04-27 09:18:03 PDT
Assuming the test is failing because we're hitting the reentrancy guard added by
r167818
, we should probably break runTest() in the layout test into multiple pieces (using setTimeout() calls). Yep, that fixes the test.
David Kilzer (:ddkilzer)
Comment 5
2014-04-27 10:20:06 PDT
(In reply to
comment #4
)
> Assuming the test is failing because we're hitting the reentrancy guard added by
r167818
, we should probably break runTest() in the layout test into multiple pieces (using setTimeout() calls). > > Yep, that fixes the test.
Correction, I must not have been running against the build of WebKit I thought I was.
David Kilzer (:ddkilzer)
Comment 6
2014-04-27 10:25:59 PDT
Created
attachment 230261
[details]
Incorrect fix: use setTimeout() in test Perhaps the re-entrant behavior needs to be fixed in WebCore itself.
Jon Honeycutt
Comment 7
2014-05-09 17:51:12 PDT
Created
attachment 231199
[details]
Patch
Darin Adler
Comment 8
2014-05-10 11:01:09 PDT
Comment on
attachment 231199
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=231199&action=review
> Source/WebCore/editing/ApplyStyleCommand.cpp:816 > for (size_t i = 0; i < runs.size(); i++) { > - removeConflictingInlineStyleFromRun(style, runs[i].start, runs[i].end, runs[i].pastEndNode); > - runs[i].positionForStyleComputation = positionToComputeInlineStyleChange(runs[i].start, runs[i].dummyElement); > + InlineRunToApplyStyle& run = runs[i];
The better way to write this is: for (auto& run : runs) {
Jon Honeycutt
Comment 9
2014-05-12 13:32:49 PDT
Committed
r168641
: <
http://trac.webkit.org/changeset/168641
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug